app/main/default/objects/sf_tfs__Project__c/sf_tfs__Project__c.object-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__Default_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_tfs__Default_Work_Item__c</fullName>
        <label>Default Work Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_tfs__Fields__c</fullName>
        <label>Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf_tfs__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_tfs__Organization__c</fullName>
        <label>Organization</label>
        <referenceTo>sf_tfs__Organization__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sf_tfs__Processes_Id__c</fullName>
        <label>Processes Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_tfs__ProjectKey__c</fullName>
        <externalId>true</externalId>
        <label>Project Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_tfs__Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_tfs__Revision__c</fullName>
        <label>Revision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf_tfs__State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_tfs__Visibility__c</fullName>
        <label>Visibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_tfs__Write__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Write</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_tfs__isSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSelected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_tfs__url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>sf_tfs__All</fullName>
        <columns>NAME</columns>
        <columns>sf_tfs__Organization__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>