app/main/default/objects/sf_tfs__Project__c/fields/sf_tfs__Fields__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__Fields__c</fullName>
        <label>Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>