app/main/default/objects/sf_tfs__Project__c/fields/sf_tfs__Organization__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__Organization__c</fullName>
        <label>Organization</label>
        <referenceTo>sf_tfs__Organization__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>