app/main/default/objects/sf_tfs__Project__c/fields/sf_tfs__Processes_Id__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__Processes_Id__c</fullName>
        <label>Processes Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>