app/main/default/objects/sf_tfs__Project__c/fields/sf_tfs__ProjectKey__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__ProjectKey__c</fullName>
        <externalId>true</externalId>
        <label>Project Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>