app/main/default/objects/sf_tfs__Project__c/fields/sf_tfs__Read__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>