app/main/default/objects/sf_tfs__Project__c/fields/sf_tfs__Revision__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__Revision__c</fullName>
        <label>Revision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>