app/main/default/objects/sf_tfs__Project__c/fields/sf_tfs__Visibility__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__Visibility__c</fullName>
        <label>Visibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>