app/main/default/objects/sf_tfs__Project__c/listViews/sf_tfs__All.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>sf_tfs__All</fullName>
        <columns>NAME</columns>
        <columns>sf_tfs__Organization__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>